// Copyright (c) Ultraviolet
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package agent;

option go_package = "./agent";

service AgentService {
  rpc Algo(stream AlgoRequest) returns (AlgoResponse) {}
  rpc Data(stream DataRequest) returns (DataResponse) {}
  rpc Result(ResultRequest) returns (stream ResultResponse) {}
  rpc Attestation(AttestationRequest) returns (AttestationResponse) {}
}

message AlgoRequest {
  bytes algorithm = 1;
  bytes requirements = 2;
  bytes results_file = 3;
}

message AlgoResponse {}

message DataRequest {
  bytes dataset = 1;
}

message DataResponse {}

message ResultRequest {
}

message ResultResponse {
  bytes file = 1;
}

message AttestationRequest {
  bytes report_data = 1; // Should be of length 64.
}

message AttestationResponse {
  bytes file = 1;
}
